Fixed fot size on card (mobile)

--- a/styles.css
+++ b/styles.css
@@ -481,5 +481,7 @@ footer {
     .section {margin: calc(2em + 4vh) 0;}
 
     .Best-Seller-wrapper .arrow-more { right: 10% }
+
+    .best-seller-card-name {font-size: calc(1.8vmax + 2em);}
 }
 
